# rencore

./: .clog.toml  .cursorignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cargo-graph.dot  local-compile.sh  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: api-calls.mdc  api-definition.mdc  api-errors.mdc  application-structure.mdc  corey-llm-config.mdc  cors-config.mdc  frontend-security.mdc  logging-standards.mdc  logto-api.mdc  raw-endpoints.mdc  react-standards.mdc  shadcn-standards.mdc
.github/: CONTRIBUTING.md
.github/workflows/: audit.yml  build.yml  codecov.yml  lint.yml  tests.yml  toc.yml
cli/: Cargo.toml
cli/_old_source_/cli/cmd/tsbundler-encore/: rsc-plugin.go
cli/src/: lib.rs
core/: Cargo.toml
core/src/: commands.rs
docker/: Dockerfile
grpc/: Cargo.toml  build.rs
grpc/src/: client.rs  lib.rs  server.rs
runtimes/core/: Cargo.toml
supervisor/: Cargo.toml
supervisor/src/: proxy.rs
tests/: test_cli.rs
tests/hello-world/: package-lock.json  package.json
tsparser/src/parser/: module_loader.rs  parser.rs
tsparser/src/runtimeresolve/: node.rs
utils/: Cargo.toml
utils/src/: app_root.rs  error.rs  lib.rs  logger.rs
vendors/encore/: Cargo.toml  local-compile.sh  local-encoredev-install.sh
vendors/encore/libs/pingora/pingora-core/: Cargo.toml
vendors/encore/libs/pingora/pingora-core/src/protocols/http/compression/: mod.rs
vendors/encore/libs/pingora/pingora-proxy/src/: lib.rs
vendors/encore/runtimes/core/: Cargo.toml
vendors/encore/supervisor/: Cargo.toml
vendors/encore/tsparser/: Cargo.toml
vendors/encore/tsparser/src/builder/: bundler.rs
