[package]
name = "rencore"
version = "0.0.1"
authors = ["Bartek Kus <7887446+bartekus@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/bartekus/rencore"
readme = "README.md"
license = "MIT"
keywords = ["cli", "starter"]
description = """
Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
"""

[workspace]
resolver = "2"
members = ["utils", "cli", "core", "vendors/encore/runtimes/core", "vendors/encore/runtimes/js", "vendors/encore/tsparser", "vendors/encore/supervisor"]

[features]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
journald = ["utils/journald"]
syslog = ["utils/syslog"]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli" }
core = { path = "core" }
encore-runtime-core = { path = "vendors/encore/runtimes/core" }
encore-js-runtime = { path = "vendors/encore/runtimes/js" }
encore-tsparser = { path = "vendors/encore/tsparser" }
encore-supervisor = { path = "vendors/encore/supervisor" }
human-panic = "2.0.0"
better-panic = "0.3.0"
log = "0.4.27"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.dev.package]
insta.opt-level = 3

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[patch.crates-io]
tokio-postgres = { path = "vendors/encore/libs/rust-postgres/tokio-postgres"}
postgres-protocol = { path = "vendors/encore/libs/rust-postgres/postgres-protocol"}
swc_ecma_parser = { path = "vendors/encore/libs/swc/crates/swc_ecma_parser"}
swc_ecma_ast = { path = "vendors/encore/libs/swc/crates/swc_ecma_ast"}
swc_ecma_transforms_base = { path = "vendors/encore/libs/swc/crates/swc_ecma_transforms_base"}
swc_atoms = { path = "vendors/encore/libs/swc/crates/swc_atoms"}
swc_common = { path = "vendors/encore/libs/swc/crates/swc_common"}
swc_ecma_loader = { path = "vendors/encore/libs/swc/crates/swc_ecma_loader"}
swc_ecma_visit = { path = "vendors/encore/libs/swc/crates/swc_ecma_visit"}