[package]
name = "core"
version = "0.0.1"
authors = ["Bartek Kus <7887446+bartekus@users.noreply.github.com>"]
description = "The application core code"
edition = "2021"

[dependencies]
grpc = { path = "../grpc" }
utils = { path = "../utils" }

rand = "0.9.1"
log = "0.4.27"
tonic = "0.12.3"
futures-util = "0.3.31"