[package]
name = "grpc"
version = "0.0.1"
authors = ["Bartek Kus <7887446+bartekus@users.noreply.github.com>"]
description = "The application grpc code"
edition = "2021"

[dependencies]
rand = "0.9.1"
log = "0.4.27"
prost = "0.13"
prost-derive = "0.13"
prost-types = "0.13"
prost-build = "0.13"
tokio = { version = "1.37", features = ["full"] }
tonic = "0.12"
tonic-web = "0.12"
bytes               = { version = "1.4",  optional = true }
http                = { version = "1.3",  optional = true }
hyper               = { version = "1.6", features = ["client","server","http2"], optional = true }
hyper-util          = { version = "0.1",  optional = true }
tracing-subscriber  = { version = "0.3",  optional = true }
tower               = { version = "0.5",  optional = true }
tower-http          = { version = "0.6",  optional = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["grpc-web"]  # if you want it on by default

grpc-web = [
    "dep:bytes",                   # turn on `bytes`
    "dep:http",                    # turn on `http`
    "dep:hyper",                   # turn on `hyper`
    "dep:hyper-util",              # turn on `hyper-util`
    "dep:tracing-subscriber",      # turn on logging
    "dep:tower",                   # turn on `tower`
    "dep:tower-http",              # turn on `tower-http`
    "tower-http?/cors",            # if tower-http is present, also enable its "cors" feature
]

[[bin]]
name = "grpc-web-server"
path = "src/server.rs"
required-features = ["grpc-web"]

[[bin]]
name = "grpc-web-client"
path = "src/client.rs"
required-features = ["grpc-web"]
