[workspace]
resolver = "2"
members = ["runtimes/core", "runtimes/js", "tsparser", "supervisor"]

[profile.dev.package]
insta.opt-level = 3

[profile.release]
lto = true

[patch.crates-io]
tokio-postgres = { path = "libs/rust-postgres/tokio-postgres", version = "0.7.10" }
postgres-protocol = { path = "libs/rust-postgres/postgres-protocol", version = "0.6.6"}

swc_ecma_parser = { path = "libs/swc/crates/swc_ecma_parser", version = "0.141.21"}
swc_ecma_ast = { path = "libs/swc/crates/swc_ecma_ast", version = "0.110.9"}
swc_ecma_transforms_base = { path = "libs/swc/crates/swc_ecma_transforms_base", version = "0.134.30"}
swc_atoms = { path = "libs/swc/crates/swc_atoms", version = "0.6.4"}
swc_common = { path = "libs/swc/crates/swc_common", version = "0.33.8"}
swc_ecma_loader = { path = "libs/swc/crates/swc_ecma_loader", version = "0.45.9"}
swc_ecma_visit = { path = "libs/swc/crates/swc_ecma_visit", version = "0.96.9"}

pingora-core = { path = "libs/pingora/pingora-core", version = "0.4"}
pingora-cache = { path = "libs/pingora/pingora-cache", version = "0.4"}
pingora-load-balancing = { path = "libs/pingora/pingora-load-balancing", version = "0.4"}
pingora-proxy = { path = "libs/pingora/pingora-proxy", version = "0.4"}
pingora-openssl = { path = "libs/pingora/pingora-openssl", version = "0.4"}
pingora-http = { path = "libs/pingora/pingora-http", version = "0.4"}


[workspace.dependencies]
tokio = "1"
async-trait = "0.1.42"
httparse = "1"
bytes = "1.0"
http = "1.0.0"
log = "0.4"
h2 = ">=0.4.6"
once_cell = "1"
lru = "0"
ahash = ">=0.8.9"

tokio-postgres = "=0.7.10"
postgres-protocol = "=0.6.6"